# RIA

./: CMakeLists.txt  Cargo.toml  LICENSE  License.md  README.md  instructions.md  protocol.md  tcp_commands.md
docs/: AUDIO_SYSTEM.md  BUILD_SYSTEM.md  CHANGELOG.md  CONFIGURATION_SYSTEM.md  CatControl.md  GIT_WORKFLOW.md  GUI_ARCHITECTURE.md  SECURITY.md  TCPCommands.md
include/ultra/: fec.hpp  logging.hpp  ofdm.hpp  ofdm_link_adaptation.hpp  otfs.hpp  types.hpp
src/: lib.rs  main.cpp  main.rs
src/afdm/: afdm.cpp  afdm.hpp  afdm_config.hpp  daft.cpp  daft.hpp
src/audio/: buffer.rs  device.rs  mod.rs  ptt.rs
src/cat/: cat_backend.cpp  cat_backend.hpp  cat_controller.cpp  cat_controller.hpp  hamlib_backend.cpp  hamlib_backend.hpp  kenwood_tcp_backend.cpp  kenwood_tcp_backend.hpp  serial_ptt_backend.cpp  serial_ptt_backend.hpp
src/crypto/: aes256.cpp  aes256.hpp
src/dsp/: afc.rs  agc.rs  daft.rs  fft.cpp  fft.rs  filter.rs  metrics.rs  mod.rs  window.rs
src/fec/: burst_interleaver.cpp  burst_interleaver.hpp  chase_cache.cpp  chase_cache.hpp  codec_factory.cpp  codec_factory.hpp  codec_interface.hpp  convolutional.rs  crc.rs  frame_interleaver.cpp  frame_interleaver.hpp  huffman.rs  interleaver.rs  ldpc.rs  ldpc_codec.cpp  ldpc_codec.hpp  ldpc_decoder.cpp  ldpc_matrices.rs  mod.rs  turbo.rs
src/fsk/: mfsk.hpp
src/gui/: app.cpp  app.hpp  app.rs  audio_engine.cpp  audio_engine.hpp  constellation.rs  main_gui.cpp  meters.rs  mod.rs  serial_ptt.cpp  serial_ptt.hpp  settings.rs  startup_trace.hpp  waterfall.rs
src/gui/modem/: modem_engine.cpp  modem_engine.hpp  modem_mode.cpp  modem_rx.cpp  modem_rx_constants.hpp  modem_rx_decode.cpp  streaming_decoder.cpp  streaming_decoder.hpp  streaming_encoder.cpp  streaming_encoder.hpp
src/gui/widgets/: constellation.cpp  constellation.hpp  controls.cpp  controls.hpp  file_browser.cpp  settings.cpp  settings.hpp  status.cpp  status.hpp  waterfall.cpp
src/interface/: command_parser.cpp  command_parser.hpp  commands.rs  host_interface.cpp  host_interface.hpp  interface.hpp  kiss.rs  kiss_tnc.cpp  kiss_tnc.hpp  mod.rs  response.cpp  response.hpp  tcp.rs  tcp_server.cpp  tcp_server.hpp
src/modem/: ack_fsk.rs  afdm.rs  constellation.rs  mfsk.rs  mod.rs  modem.cpp  ofdm.rs  preamble.rs  stanag.rs  sync.rs
src/ofdm/: channel_equalizer.cpp  demodulator.cpp  demodulator_constants.hpp  demodulator_impl.hpp  modulator.cpp  ofdm_sync.cpp  soft_demap.hpp
src/otfs/: otfs.cpp
src/protocol/: arq.cpp  arq.hpp  arq.rs  arq_interface.hpp  connection.cpp  connection.hpp  connection_handlers.cpp  encryption.rs  file_transfer.cpp  file_transfer.hpp  frame.rs  frame_v2.cpp  frame_v2.hpp  mod.rs  protocol_engine.cpp  protocol_engine.hpp  rate.rs  selective_repeat_arq.cpp  selective_repeat_arq.hpp  session.rs  waveform_selection.hpp
src/psk/: multi_carrier_dpsk.hpp
src/sim/: continuous_audio_simulator.cpp  continuous_audio_simulator.hpp  hf_channel.hpp
src/sync/: chirp_sync.hpp  css_sync.hpp  zc_sync.hpp
src/waveform/: mc_dpsk_waveform.cpp  mc_dpsk_waveform.hpp  mfsk_waveform.cpp  mfsk_waveform.hpp  ofdm_chirp_waveform.cpp  ofdm_chirp_waveform.hpp  ofdm_cox_waveform.cpp  ofdm_cox_waveform.hpp  otfs_waveform.cpp  otfs_waveform.hpp  waveform_factory.cpp  waveform_factory.hpp  waveform_interface.hpp
tests/: full_stack_test.rs  loopback.rs  realtime_audio_test.rs
tools/: cli_simulator.cpp  start_dual_modems.sh  test_chase_cache.cpp  test_css_sync.cpp  test_dual_modem_tcp.sh  test_spreading.cpp  test_throughput.cpp  test_waveform_simple.cpp  test_zc_dbpsk.cpp  test_zc_sync.cpp  threaded_simulator.cpp  verify_cfo_chain_dump.py
